# hs-task

./: README.md
cmdoc/: cmdoc.cabal
cmdoc/Text/: CmDoc.hs
cmdoc/Text/CmDoc/: Lexer.hs  String.hs  Types.hs
task-cruncher/: Main.hs  task-cruncher.cabal
task-cruncher/Text/Task/Cruncher/: Html.hs  Output.hs  Plain.hs  Xml.hs
task-finder/: Main.hs  task-finder.cabal
task-finder/Text/Task/Finder/: Find.hs
task-parser/: task-parser.cabal
task-parser/Text/Task/Parser/: Parse.hs  Types.hs
task-test/: Run.hs  SetGen.hs  TaskParser.hs  task-test.cabal
todo-cruncher/: Main.hs  todo-cruncher.cabal
todo-cruncher/Text/Todo/Cruncher/: Html.hs  Output.hs  Plain.hs  Xml.hs
todo-finder/: Main.hs  todo-finder.cabal
todo-finder/Text/Todo/Finder/: Find.hs
todo-parser/: todo-parser.cabal
todo-parser/Text/Todo/Parser/: Parse.hs  Types.hs
todo-test/: Run.hs  SetGen.hs  TodoParser.hs  todo-test.cabal
