Name:          task-finder
Version:       0.1
Synopsis:      Specialized finder program for recursive searching of raw task tags in source files
Description:
  Specialized finder program for recursive searching of raw task tags in source files.
  It provides necessary input for the task-parser library.
Author:        Alen Ribic
Maintainer:    alen.ribic@gmail.com
Build-type:    Simple
Cabal-Version: >= 1.2

Executable task-find
  main-is: Main.hs

  Build-Depends:   base >= 4,
                   filepath,
                   old-time,
                   directory,
                   split >= 0.1.2,
                   task-parser >= 0.1

library
  Exposed-Modules: Text.Task.Finder.Find

  Build-Depends:   base >= 4,
                   filepath,
                   old-time,
                   directory,
                   split >= 0.1.2,
                   task-parser >= 0.1
