Name:          task-parser
Version:       0.1
Synopsis:      Task-parser is a code-level task tags parser
Description:
  Core overview:
  Code-level task manager
  Task-parser:
  Code-level task tags parser
Author:        Alen Ribic
Maintainer:    alen.ribic@gmail.com
Build-type:    Simple
Cabal-Version: >= 1.2

library
  Exposed-Modules: Text.Task.Parser.Parse,
                   Text.Task.Parser.Types

  Build-Depends:   base >= 4,
                   parsec >= 3.0.0 && <=3.0.1,
                   filepath,
                   directory,
                   cmdoc >= 0.1
