Name:          task-parser
Version:       0.1
Synopsis:      Task-parser is an in-code task management parser
Description:
  Core overview:
  An in-code task management utility
  Task-parser:
  An in-code task management parser
Author:        Alen Ribic
Maintainer:    alen.ribic@gmail.com
Build-type:    Simple
Cabal-Version: >= 1.2

library
  Exposed-Modules: Text.Task.Parser.Parse,
                   Text.Task.Parser.Types

  Build-Depends:   base >= 4,
                   parsec >= 3.0.0 && <=3.0.1,
                   filepath,
                   directory,
                   cmdoc >= 0.1
