Name:          task-test
Version:       0.1
Synopsis:      Test suite for hs-task
Description:
  Test suite for hs-task. 
  Consists of test set generator, test properties and related.
Author:        Alen Ribic
Maintainer:    alen.ribic@gmail.com
Build-type:    Simple
Cabal-Version: >= 1.2

Executable task-test
  main-is: Run.hs

  Build-Depends:   base >= 4,
                   QuickCheck >= 2.1.0.3,
                   cmdoc >= 0.1,
                   task-parser >= 0.1
