Name:          todo-cruncher
Version:       0.1
Synopsis:      Todo-cruncher outputs parsed '@TODO' doc tags
Description:
  The Todo-cruncher outputs parsed '@TODO' doc tags into human and system 
  readable format(s)
Author:        Alen Ribic
Maintainer:    alen.ribic@gmail.com
Build-type:    Simple
Cabal-Version: >= 1.2

Executable todo-crunch
  main-is: Main.hs

  Build-Depends:   base >= 4,
                   filepath,
                   directory,
                   old-locale,
                   time,
                   bytestring >= 0.9.1.4,
                   blaze-html >= 0.1 && <= 0.1.2,
                   xml >= 1.3.7,
                   todo-parser >= 0.1
