Name:          todo-finder
Version:       0.1
Synopsis:      Finder program that allows recursive searching of raw '@TODO' tags in source files
Description:
  Finder program that allows recursive searching of raw '@TODO' tags in source files.
  It provides necessary input for the todo-parser library.
Author:        Alen Ribic
Maintainer:    alen.ribic@gmail.com
Build-type:    Simple
Cabal-Version: >= 1.2

Executable todo-find
  main-is: Main.hs

  Build-Depends:   base >= 4,
                   filepath,
                   old-time,
                   directory,
                   split >= 0.1.2,
                   todo-parser >= 0.1

library
  Exposed-Modules: Text.Todo.Finder.Find

  Build-Depends:   base >= 4,
                   filepath,
                   old-time,
                   directory,
                   split >= 0.1.2,
                   todo-parser >= 0.1
