Name:          todo-parser
Version:       0.1
Synopsis:      Todo-parser is a '@TODO' doc tags parser
Description:
  Core overview:
  Lightweight TODO code-level manager.
  Todo-parser:
  Source-code level '@TODO' doc tags parser
Author:        Alen Ribic
Maintainer:    alen.ribic@gmail.com
Build-type:    Simple
Cabal-Version: >= 1.2

library
  Exposed-Modules: Text.Todo.Parser.Parse,
                   Text.Todo.Parser.Types

  Build-Depends:   base >= 4,
                   parsec >= 3.0.0 && <=3.0.1,
                   filepath,
                   directory,
                   cmdoc >= 0.1
